[package]
name = "ipscanner"
version = "0.1.1"
edition = "2021"
build = "build.rs"
description = "A desktop IP scanner for Windows and macOS with multilingual UI, hostname lookup, and CSV/XLSX export."
readme = "README.md"

[[bin]]
name = "IPScanner"
path = "src/main.rs"

[features]
default = []
with-pnet = ["dep:pnet"]

[dependencies]
csv = "1.3"
dns-lookup = "2.0"
eframe = { version = "0.31", default-features = true }
egui = "0.31"
egui_extras = "0.31"
ipnet = "2.11"
once_cell = "1.20"
pnet = { version = "0.35", optional = true }
rayon = "1.10"
regex = "1.11"
rfd = "0.15"
rust_xlsxwriter = "0.84"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
ipconfig = "0.3"

[target.'cfg(not(windows))'.dependencies]
if-addrs = "0.13"

[build-dependencies]
winres = "0.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
